Fix Buttons Contrast

--- a/style.css
+++ b/style.css
@@ -65,13 +65,13 @@ body {
   display: inline-block;
   color: #fff;
   padding: 14px 8px;
-  background: #ff6b00;
+  background: #802E00;
   font-family: 'Inter', sans-serif;
   font-size: 17px;
   text-align: center;
   font-weight: 500;
   cursor: pointer;
-  border: 1px solid #ff6b00;
+  border: 1px solid #802E00;
   transition-property: background;
   transition-duration: 0.5s;
   transition-timing-function: ease-out;
@@ -79,12 +79,12 @@ body {
 
 .card-button:hover {
   background: #fff5e1;
-  border: 1px solid #f55800;
-  color: #f55800;
+  border: 1px solid #802E00;
+  color: #802E00;
 }
 
 .card-button:active {
-  background: #e05304;
+  background: #802E00;
   color: #fff;
 }
 
